# neur_lab6

./: README.md  pyproject.toml
src/nice/: crew.py  main.py
src/nice/config/: agents.yaml  tasks.yaml
