[project]
name = "nice"
version = "0.1.0"
description = "nice using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.1",
	"crewai",
	"litellm"
]

[project.scripts]
nice = "nice.main:run"
run_crew = "nice.main:run"
train = "nice.main:train"
replay = "nice.main:replay"
test = "nice.main:test"
run_with_trigger = "nice.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
